--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -40,6 +40,7 @@
             android:imeOptions="actionSearch"/>
 
 
+
     </RelativeLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -49,24 +50,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="match_parent"
-            android:layout_height="255dp"
+            android:layout_height="340dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/btnAnimar"
             android:layout_marginTop="118dp" />
 
         <Button
             android:id="@+id/btnAnimar"
-            android:layout_width="wrap_content"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="right"
             android:layout_marginStart="35dp"
             android:text="animar" />
+
     </LinearLayout>
 </RelativeLayout>
