--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -67,7 +67,7 @@
             android:layout_alignParentTop="true"
             android:layout_gravity="right"
             android:layout_marginStart="35dp"
-            android:text="animar" />
+            android:text="Ir a CUCIénega" />
 
     </LinearLayout>
 </RelativeLayout>
